--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
-<!DOCTYPE  html>
-<html  lang="en">
-	<head>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Test</title>
         <link rel="stylesheet" href="main.css">
-		<title>Document</title>
-	</head>
-	<body>
-        <div class="white"> Hello </div>	    
-	</body>
-</html>
+    </head>
 
+    <body class="center">
+
+        <img class="title" src="car.png" /> <!-- http://pngimg.com/uploads/steering_wheel/steering_wheel_PNG16672.png --> 
+        <div id="car"></div>
+        <div>
+            <img class="button" id="prev" src="back.png">      <!-- https://imgur.com/V1BqV4S.png --> 
+            <img class="button" id="next" src="fwd.png" >     <!-- https://imgur.com/13HDNXU.png --> 
+        </div>
+
+        <script src="app.js"></script>   
+
+    </body>
+</html>
