update car cars

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body class="center">
 
         <img class="title" src="car.png" /> <!-- http://pngimg.com/uploads/steering_wheel/steering_wheel_PNG16672.png --> 
-        <div id="car"></div>
+        <div id="cars"></div>
         <div>
             <img class="button" id="prev" src="back.png">      <!-- https://imgur.com/V1BqV4S.png --> 
             <img class="button" id="next" src="fwd.png" >     <!-- https://imgur.com/13HDNXU.png --> 
